--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
  — “7”
 script:
- — echo “Deploy!!”
+ — echo “REM OFFICIAL - HOST DEPLOYMENT”
 install:
  — npm install -g firebase-tools
 after_success:
