--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
- — “7”
+ - “7”
 script:
- — echo “REM OFFICIAL - HOST DEPLOYMENT”
+ - echo “REM OFFICIAL - HOST DEPLOYMENT”
 install:
- — npm install -g firebase-tools
+ - npm install -g firebase-tools
 after_success:
- — firebase deploy — project rem-official — token $FIREBASE_TOKEN.
+ - firebase deploy --project rem-official --token $FIREBASE_TOKEN
