--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
+language: node_js
+node_js:
+ - “7”
+script:
+ - echo “REM OFFICIAL - HOST DEPLOYMENT”
+install:
+ - npm install -g firebase-tools
 deploy:
   provider: firebase
   token:
