--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
-nvm:
-  "7"
 script:
   echo “REM OFFICIAL - HOST DEPLOYMENT”
+before_install:
+  npm install -g npm
 install:
   npm install -g firebase-tools
 deploy:
