--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "7"
+script:
+  printf "\nREM OFFICIAL - HOST DEPLOYMENT"
 deploy:
   provider: firebase
   skip_cleanup: true
