--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,13 @@
           }
         ]
       }
+    ],
+    "redirects": [
+      {
+        "source": "*",
+        "destination": "https://rem-official.github.io",
+        "type": 302
+      }
     ]
   }
 }
