attempt to redirect to root of new website

--- a/firebase.json
+++ b/firebase.json
@@ -20,7 +20,7 @@
     "redirects": [
       {
         "source": "*",
-        "destination": "https://rem-official.github.io",
+        "destination": "https://rem-official.github.io/",
         "type": 302
       }
     ]
